# shirasu

./: .gitignore  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: check.yml  format.yml
shirasu/: config.py  logger_config.py  main.py
shirasu/bot/: discordbot.py
shirasu/io/: __init__.py  json.py  json_handler.py  utils.py
tests/io/: test_json.py  test_utils.py  utils.py
