[tool.poetry]
name = "shirasu"
version = "0.1.0"
description = ""
authors = ["FUKUOKA Keito <keito.0o0.kirby@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
