[tool.poetry]
name = "shirasu"
version = "0.1.1"
description = ""
authors = ["FUKUOKA Keito <keito.0o0.kirby@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
shirasu = "shirasu.main:app"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.5"
discord-py = "^2.4.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.384"
isort = "^5.13.2"
black = "^24.10.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
